# canarytokens

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  authenticode.py  automated_token_creation_tests.patch  block_user.py  caa_monkeypatch.py  canarydrop.py  cc_runner.py  cctoken.py  channel.py  channel_dns.py  channel_http.py  channel_input_bitcoin.py  channel_input_imgur.py  channel_input_linkedin.py  channel_input_mtls.py  channel_input_mysql.py  channel_input_smtp.py  channel_input_wireguard.py  channel_output_email.py  channel_output_twilio.py  channel_output_webhook.py  constants.py  datagen.py  exception.py  extendtoken.py  frontend.tac  httpd_site.py  kubeconfig.py  linkedin.py  log.py  log_test.py  loghandlers.py  makefile  msexcel.py  (+23 more)
.devcontainer/: Dockerfile  custom-installs.sh  devcontainer.json  docker-compose.yml
.devcontainer/library-scripts/: common-debian.sh  custom-installs.sh  docker-debian.sh
.github/: dependabot.yml
.github/workflows/: build.yml  build_docker.yml  cypress.yml  fix-typos.yml  playwright.yml  stale_issues.yml  test.yml
aws-css-token-infra/CSSClonedSiteCFFunc/: index.js
aws-css-token-infra/tests/: 404-favicon.json  invalid-referrer.json  invalid-sneakysubdomain.json  valid-azuresso.json  valid-kv-exclusion.json  valid-loginmscom.json  valid-loginwindowsnet.json  valid-microsoftonlinecom.json  valid-noreferrer.json
aws-exposed-key-checker-infra/: .gitignore  .terraform.lock.hcl  main.tf  requirements.txt  variables.tf
aws-exposed-key-checker-infra/tests/: test_data_to_ignore.json  test_data_to_parse.json  test_lambda.py
aws-s3-bucket-cfn-infra/: main.tf  template.json
aws-token-infra/: .gitignore  awsid.tf
aws-token-infra/retrofitter/: retrofit.tf
aws_ct_tf/: cloudtrail.tf  decoys.tf
aws_infra_token_tf/: cloudtrail.tf  decoy_vars.json  decoys.tf  main.tf
backend/: Dockerfile  app.py  backend.env  root-ca.conf
canarytokens/: authenticode.py  aws_infra.py  awskeys.py  azure_css.py  azurekeys.py  canarydrop.py  channel.py  channel_dns.py  channel_http.py  channel_input_mtls.py  channel_input_mysql.py  channel_input_postgresql.py  channel_input_smtp.py  channel_input_wireguard.py  channel_output_email.py  channel_output_webhook.py  constants.py  credit_card_v2.py  crowdstrikekeys.py  datagen.py  exceptions.py  extendtoken.py  gcpkeys.py  glpat.py  kubeconfig.py  loghandlers.py  looping_jobs.py  mcp.py  models.py  msexcel.py  msreg.py  msword.py  mysql.py  npmtokens.py  pdfgen.py  postgresql.py  queries.py  redismanager.py  saml.py  settings.py  (+9 more)
canarytokens/advocate/: __init__.py  adapters.py  addrvalidator.py  api.py  connection.py  connectionpool.py  exceptions.py  futures.py  poolmanager.py
canarytokens/aws_infra/: __init__.py  aws_management.py  data_generation.py  db_queries.py  management.py  operations.py  plan_generation.py  state_management.py  terraform_generation.py  utils.py
canarytokens/models/: __init__.py  adobe_pdf.py  aws_infra.py  aws_keys.py  azure_id.py  cc.py  clonedsite.py  cmd.py  common.py  credit_card.py  credit_card_v2.py  crowdstrike_cc.py  cssclonedsite.py  dns.py  fast_redirect.py  idp_app.py  kubeconfig.py  legacy.py  log4shell.py  mcp.py  ms_excel.py  ms_word.py  my_sql.py  npm_publish.py  pwa.py  qr_code.py  signed_exe.py  slack_api.py  slow_redirect.py  smtp.py  sql_server.py  svg.py  svn.py  web.py  web_image.py  webdav.py  windows_dir.py  windows_fake_fs.py  wireguard.py
canarytokens/windows_fake_fs/: windows_fake_fs.py
canarytokens/windows_fake_fs_templates/: folder_defense.py  folder_dummy.py  folder_home_network.py  folder_med_tech.py  folder_network_admin.py  folder_personal_correspondence.py  folder_personal_finances.py  folder_photo_archive.py  folder_security_admin.py  powershell_template.py
cypress/: README.md
cypress-tests/: package-lock.json  package.json
cypress-tests/cypress/: README.md
cypress/e2e/: canary-tokens.cy.js
frontend/: app.py  frontend.env  frontend.env.dist  log.ini  root-ca.conf
frontend_vue/: .editorconfig  .editorconfig copy  .eslintrc.cjs  .gitignore  .prettierrc  .prettierrc.json  README.md  components.d.ts  cypress.config.js  env.d.ts  global-components.d.ts  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend_vue/.husky/: pre-commit
frontend_vue/src/: App.vue  constants.ts  main.ts  style.css
frontend_vue/tests/: create-token.spec.ts  home.spec.ts
scripts/: compile_mjml_email_templates.sh
switchboard/: Dockerfile  switchboard.env  switchboard.env.dist  switchboard.tac
templates/: 404.html  500.html  azure_install.html  browser_scanner.html  close.html  error.html  error_http.html  fortune.html  generate.html  generate_new.html  history.html  legal.html  manage.html  manage_new.html  manage_old.html  pwa.html  pwa_manifest.json  pwa_sw.js  robots.txt  secure_note.html  security.txt  security.txt.unsigned  template.docx  template.msi  template.xlsx  terms.html
templates/emails/: _generated_dont_edit_notification.html  _generated_dont_edit_notification_token_exposed.html  _generated_dont_edit_token_list.html  _notification.html  notification.html  notification.mjml  notification.txt  notification_token_exposed.mjml  readme.txt  reset.html  reset.txt  token_list.mjml  token_list.txt
templates/pale_blue_dot/: body.html  head.html  script.html
templates/scanner/: body.html  script.html
templates/static/: 404style.css  famfamfam-flags.css  site.js  sitemap.xml  styles.css  styles.min.css  styles.min.css.map
testing/: creds.docx
tests/: conftest.py  utils.py
tests/data/: kubeconfig_chirp.json  kubeconfig_lines.txt  sample_saml_data.txt  sql_server_token_delete_script.txt  sql_server_token_insert_script.txt  sql_server_token_select_script.txt  sql_server_token_update_script.txt
tests/integration/: test_against_token_server.py  test_aws_infra.py  test_aws_key_token.py  test_azure_key_token.py  test_cc_token.py  (+18 more)
(+527 files in other folders)
