[project]
name = "canarytokens"
version = "0.3.0"
description = "Canarytokens"
authors = [{ name = "Thinkst Applied Research" }]
requires-python = ">=3.13,<4"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "azure-core>=1.38.0,<2",
    "azure-identity>=1.10.0,<2",
    "boto3>=1.23.10,<2",
    "botocore>=1.34.141,<2",
    "cssutils>=2.11.1,<3",
    "faker>=17.6.0,<18",
    "fastapi==0.125.0",
    "h11>=0.16.0,<0.17",
    "httpx>=0.28.0,<0.29",
    "Jinja2>=3.1.6,<4",
    "minify-html>=0.18.1,<0.19",
    "netifaces>=0.11.0,<0.12",
    "pycountry-convert>=0.7.2,<0.8",
    "pydantic[dotenv, email]>=1.9.1,<2",
    "PyNaCl>=1.5.0,<2",
    "pyOpenSSL>=23.0.0,<24",
    "PyQRCode>=1.2.1,<2",
    "python-multipart>=0.0.22,<0.0.23",
    "PyYAML>=6.0,<7",
    "redis>=4.2.0,<5",
    "requests>=2.32.4,<3",
    "segno>=1.5.2,<2",
    "sendgrid>=6.9.7,<7",
    "sentry-sdk[fastapi]>=2.53.0,<3",
    "sentry-sdk[fastapi]>=2.53.0,<3",
    "service-identity>=21.1.0,<22",
    "Twisted>=24.10.0,<25",
    "uvicorn>=0.17.6,<0.18",
]

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.24.17,<2",
    "coverage>=7.0.0,<8",
    "debugpy>=1.6.0,<2",
    "deepdiff>=8.6.1,<9",
    "easywebdav==1.2.0",
    "hypothesis>=6.39.3,<7",
    "modernize>=0.8.0,<0.9",
    "mypy-zope>=0.3.6,<0.4",
    "mypy>=0.941,<0.942",
    "Pillow>=12.1.1,<13",
    "pre-commit>=2.17.0,<3",
    "pyngrok>=6.0.0,<7",
    "pypdf>=6.6.2,<7",
    "pytest-asyncio>=0.18.3,<0.19",
    "pytest-memray>=1.0.0,<2 ; sys_platform == 'linux'",
    "pytest-repeat>=0.9.4,<0.10",
    "pytest-twisted>=1.13.4,<2",
    "pytest>=7.1.0,<8",
    "python-docx>=0.8.11,<0.9",
    "pyzbar>=0.1.9,<0.2",
    "rpdb>=0.1.6,<0.2",
    "ruff>=0.11.0,<0.12",
    "toml>=0.10.2,<0.11",
    "types-pyOpenSSL>=22.0.4,<23",
    "types-PyYAML>=6.0.9,<7",
    "types-redis>=4.1.18,<5",
    "types-requests>=2.27.15,<3",
    "types-toml>=0.10.7,<0.11",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
