[tool.uv]
exclude-newer = "7 days"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canarytokens"
version = "0.3.0"
description = "Canarytokens"
authors = [{ name = "Thinkst Applied Research" }]
license = "GPL-3.0-only"
requires-python = ">=3.13,<3.14"
dependencies = [
    "attrs",
    "azure-core",
    "azure-identity",
    "boto3",
    "botocore",
    "cryptography",
    "cssutils",
    "faker",
    "fastapi",
    "httpx",
    "jinja2",
    "markupsafe",
    "minify-html",
    "netifaces",
    "pycountry-convert",
    "pydantic[dotenv,email]==1.10.26",
    "pynacl",
    "pyopenssl",
    "python-http-client",
    "python-jose",
    "python-multipart", # enables form parsing in fastapi (starlette)
    "pyyaml",
    "redis",
    "requests",
    "segno",
    "sendgrid",
    "sentry-sdk[fastapi]",
    "twisted[tls]",
    "typing-extensions",
    "urllib3",
    "uvicorn",
    "zope.interface",
]

[dependency-groups]
dev = [
    "boto3-stubs[essential]",
    "coverage",
    "debugpy",
    "deepdiff>=8.6.2",
    "dnspython",
    "easywebdav",
    "hypothesis",
    "modernize",
    "mypy-zope",
    "mypy",
    "pillow>=12.2.0",
    "pre-commit",
    "pyngrok",
    "pypdf",
    "pytest-asyncio",
    "pytest-memray ; sys_platform == 'linux'",
    "pytest-repeat",
    "pytest-twisted",
    "pytest",
    "python-docx",
    "pyzbar",
    "rpdb",
    "ruff",
    "starlette",
    "toml",
    "types-pyopenssl",
    "types-pyyaml",
    "types-redis",
    "types-requests",
    "types-toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
